prusti-tests/tests/parse/ui/after_expiry_fail.stderr
error: unexpected token
 --> $DIR/after_expiry_fail.rs:9:17
  |
9 | #[after_expiry(a, a)]
  |                 ^

error: reference of after_expiry must be "result"
  --> $DIR/after_expiry_fail.rs:12:16
   |
12 | #[after_expiry(a => a, a)]
   |                ^

error: aborting due to 2 previous errors

